# main.go
@@ -2,8 +2,6 @@ package main
 
 import (
 	"fmt"
-	"net/http"
-
 	"github.com/gin-contrib/pprof"
 	"github.com/gin-gonic/gin"
 	"github.com/mattn/go-colorable"
@@ -13,14 +11,17 @@ import (
 	"github.com/wxw9868/video/docs"
 	"github.com/wxw9868/video/middleware"
 	"github.com/wxw9868/video/router"
+	"github.com/wxw9868/video/service"
+	"net/http"
+	"strings"
 )
 
 // @title Video API
 // @version 1.0
 // @description This is a video server.
 
-// @host 127.0.0.1:8080
-// @host 192.168.0.9:8080
+// @host 127.0.0.1:6000
+// @host 192.168.0.9:6000
 // @BasePath /
 func main() {
 	// gin.SetMode(gin.ReleaseMode)
@@ -31,14 +32,15 @@ func main() {
 
 	r := gin.Default()
 
-	//r := gin.New()
 	//logger, _ := zap.NewProduction()
 	//r.Use(ginzap.Ginzap(logger, time.RFC3339, true))
 	//r.Use(ginzap.RecoveryWithZap(logger, true))
 	r.Use(middleware.GinCors()) // 允许跨域
 	r.NoRoute(middleware.NoRoute())
 	r.GET("/ping", func(c *gin.Context) {
-		c.JSON(http.StatusOK, gin.H{"message": "pong"})
+		c.JSON(http.StatusOK, gin.H{
+			"message": "pong",
+		})
 	})
 
 	// Set a lower memory limit for multipart forms (default is 32 MiB)
@@ -54,6 +56,12 @@ func main() {
 		ginSwagger.URL(fmt.Sprintf("http://%s:%d/swagger/doc.json", conf.Host, conf.Port)),
 		ginSwagger.DefaultModelsExpandDepth(-1)),
 	)
+
+	actresss := "篠原なぎさ,朝比奈菜々子"
+	err := service.VideoImport("D:/ta", strings.Split(actresss, ","))
+	fmt.Println(err)
+	//actresss := "目々澤めぐ,瀬戸レイカ"
+	//service.RepairVideoImport(strings.Split(actresss, ","))
 
 	if err := r.Run(fmt.Sprintf("%s:%d", conf.Host, conf.Port)); err != nil {
 		panic(err)
